# visual-suite

./: .gitmodules
few-shot-classication/: .gitignore  controler-input-test.py  main.py  pyproject.toml
image-captioning/: run.py
services/EasyMocap/: Dockerfile
services/Edgeface/: Dockerfile  config.properties  handler.py  requirements.txt  run.sh
services/FACER/: Dockerfile  process.py
services/LFD-Light-and-Fast-Detection/: Dockerfile
services/face-emotion-recognition/: Dockerfile  handler.py
services/image-captioning/: dockerfile
services/image-classifier/: Dockerfile  run.py
services/libfacedetection/: Dockerfile
services/mediapipe/: Dockerfile  routs.py
services/openpose/: Dockerfile  run.py
services/ultralytics/: routs.py
services/vedadet/: Dockerfile  server.py
services/yolov8/: Dockerfile
