[project]
name = "few-shot-classication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "pillow>=12.2.0",
    "pygame>=2.6.1",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "webcam>=1.34",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]
torchvision = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "opencv-python>=4.13.0.92",
]
webcam = [
    "webcam>=1.34",
]
